--- a/index.html
+++ b/index.html
@@ -1,51 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Embedded Mermaid Diagram</title>
+<style>
+  body, html {
+    height: 100%;
+    margin: 0;
+  }
+  iframe {
+    width: 100%;
+    height: 100%;
+    border: none; /* Optional: remove the default iframe border */
+  }
+</style>
+</head>
+<body>
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Online FlowChart &amp; Diagrams Editor - Mermaid Live Editor</title>
-    <meta
-      name="og:image"
-      content="https://github.com/mermaid-js/mermaid/raw/develop/img/header.png" />
-    <link rel="canonical" href="https://mermaid.live" />
-    <meta
-      name="description"
-      content="Simplify documentation and avoid heavy tools. Open source Visio Alternative. Commonly used for explaining your code! Mermaid is a simple markdown-like script language for generating charts from text via javascript." />
-    <link rel="icon" type="image/png" href="./favicon.svg" />
-    <link rel="mask-icon" href="./favicon.svg" color="#000000" />
-    <meta name="theme-color" content="#6366F1" />
-    <link rel="manifest" href="./manifest.json" />
-    
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DxOEDGGq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/WQg1V5Cy.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CC5yXr9j.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CY4be0OA.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DdvrmX_3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B7VIZYAR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DwwxyTTL.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D5OP_m8i.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CWj6FrbW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DSuwWf5J.js">
-  </head>
-  <body>
-    <div id="svelte">
-			<script>
-				{
-					__sveltekit_1pnbguq = {
-						base: new URL(".", location).pathname.slice(0, -1)
-					};
+<iframe src="https://mermaid.live/view#pako:eNqVlG1v2jAQx7-K5b4NVWJIQ6JpGmtRhdaViqqT1mWKHPsSLJIYmWRbC3z3OQ8EKGHV8sKyfXc_3_3PzhozyQF7OErkbzanKkd3Mz_zM6S_2-tEQJb_8HFEvYj2ihUoVE-VDGWOboNyXLPKbevjn57nLUW2uBPxPH_MXxJoQJ8pW0DGW5IG_dKsGhCEtRWtU8GULG2CwT9w0_fymnbkFSuA7IR0JjH5bl6duHqcySIH1SIVzbhMkap2A0vTqKahY1yYFHAoGKQiEy0iVFRkusKwXMRSxgmg2_HXyf0keBzPvo1ne60OIKPXQkHLYIksOBo9P83GwfRhfB-MJqiu9qCgk1qaK4DA-vSh1-t93NAinxuoSAQ3EF0uBd-03T1qDgJSR6CukOlRyPElQdCvIrsOM1DTkxJS63zcSASDJhj9R_Rh3xDYNUGf32g8epgEX8bfN01bjr2vWu9KW6QdjVpm9DS729RdqF5UGad1XCOaiZTm4KFcFYC21T7p3i_F6DaUlZ6xlCWcM5UJn7HVI0voanUDEWpvE4pEkngX0ZA7nBqrXMkF6KXNCHMMJhOpvIvhgJjE7SDsn8gOw6AP9h5TUxuM6_bdAX-D2d_MBsEtcDhvESHlIWM7hBnZVp90IU5SARIR2FfUYBsOoQ6x6RtO-0wbAos0I2oJLjA7gjYTLYo7xAaOleDYK6U2cAoqpeUSr0u2j_M5pOBjT085RLRIch_72VaHLWn2LGW6i9Q_kHiO9VNOVnpVLLlu4I2gsaJ7F323QV3LIsuxZ1cE7K3xH-xZ7tWlZQ6tAbEGLtETA79oF3Jpm6ZJ-o5D-kPbJlsDv1ZHmpdDx97-BS2oAJg    page"></iframe>
 
-					const element = document.currentScript.parentElement;
-
-					Promise.all([
-						import("./_app/immutable/entry/start.DxOEDGGq.js"),
-						import("./_app/immutable/entry/app.DdvrmX_3.js")
-					]).then(([kit, app]) => {
-						kit.start(app, element);
-					});
-				}
-			</script>
-		</div>
-  </body>
+</body>
 </html>
